wip: add resource